--- a/css/popup.css
+++ b/css/popup.css
@@ -26,4 +26,7 @@ footer
     padding: 10px 35px;
     border-top: 1px solid #e1ddd8;
     background: #D8D0C4;
+    bottom: 7px;
+    position: absolute;
+    width: 80%;
 }
